    - GNU g++ 4.3 supported.  Support for g++ 3.3 is dropped.

  - Boost version 1.33 at least is now required.
  - CGAL now depends on Boost.Threads, which implies to link against
    a compiled part of Boost.

  - The new macro CGAL_NO_DEPRECATED_CODE can be defined to disable deprecated code,
    helping users discover if they rely on code that may be removed in
    subsequent releases.

  - It is not possible anymore to set the CONTINUE mode for assertion failures.

2- Installation

  - install_cgal has been replaced by CMake.

3- Kernels

  - We recommend that you use the object_cast() function instead of assign()
    to extract an object from a CGAL::Object, for efficiency reasons.
  - The Kernel archetypes provided by the 2D/3D linear kernel have been removed.
  - The deprecated linear kernel functors Construct_supporting_line_2 and
    Construct_supporting_line_3 have been removed.
  - Ambiant_dimension and Feature_dimenison have been added to retrieve the
    potentially compile-time dimension of a space or of an object.
  - barycenter() functions have been added.

  - The geometric object Circle_3 has been added to the kernel:

    - Related Predicates: Equal_3,
                          Has_on_3:
                           - Sphere_3, Point_3
                           - Circle_3, Point_3
                           - Sphere_3, Circle_3
                           - Plane_3, Circle_3
                           - Sphere_3, Plane_3
                           - Sphere_3, Line_3
                        Bounded_side_3
                        Has_on_bounded_side_3
                        Has_on_unbounded_side_3
                        Do_intersect_3:
                               - Sphere_3, Sphere_3
                               - Sphere_3, Plane_3

    - Constructions: Construct_circle_3
                         Construct_supporting_plane_3
                         Construct_supporting_sphere_3
                         Construct_diametral_sphere_3