@@ -95,7 +95,7 @@ violated, an exception is thrown, and if nothing is done to catch it,
 the program will abort.
 This behavior can be changed by means of the following function.
 
-\ccInclude{CGAL/assertions.h}
+\ccInclude{CGAL/assertions_behaviour.h}
 
 \ccGlueBegin
 \ccGlobalFunction{Failure_behaviour
